# ProjetoDeETL

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  trasform.py
data/output/: output.xlsx
docs/: index.md  pipeline.md
pipeline/: index.html
search/: search_index.json
tests/: __init__.py  test_pipeline.py
