[tool.poetry]
name = "projetoetl"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest = "^8.0.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.2.0"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.2"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.12"
pymdown-extensions = "^10.7"
mkdocs-mermaid2-plugin = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "poetry run isort . && poetry run black ."
test = "poetry run pytest -v"
run = "python app/main.py"
docs = "mkdocs serve"
